unpackaged/main/default/objects/User/fields/AbsenceClaimsLOARole__c.field-meta.xml
<CustomField>
    <fullName>AbsenceClaimsLOARole__c</fullName>
    <label>Absence Claims LOA Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absence Examiner 1</fullName>
            </value>
            <value>
                <fullName>Absence Examiner 2</fullName>
            </value>
            <value>
                <fullName>Sr Absence Examiner</fullName>
            </value>
            <value>
                <fullName>Absence Team Lead</fullName>
            </value>
            <value>
                <fullName>Absence Supervisor</fullName>
            </value>
            <value>
                <fullName>Absence Manager</fullName>
            </value>
            <value>
                <fullName>Claims Trainee</fullName>
            </value>
            <value>
                <fullName>Claims Auditor</fullName>
            </value>
            <value>
                <fullName>Claims Director</fullName>
            </value>
            <value>
                <fullName>Claims Sr Director</fullName>
            </value>
            <value>
                <fullName>VP Claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>