unpackaged/main/default/objects/User/fields/Assignment_Group_Active__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Can this user be assigned records in the Assignment Group process.  Uncheck to mark this use as inactive on all assignment groups</inlineHelpText>
    <label>Assignment Group Active</label>
    <type>Checkbox</type>
</CustomField>