unpackaged/main/default/objects/User/fields/DisabilityClaimsLOARole__c.field-meta.xml
<CustomField>
    <fullName>DisabilityClaimsLOARole__c</fullName>
    <label>Disability Claims LOA Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Disability Claims Examiner 1</fullName>
            </value>
            <value>
                <fullName>Group Disability Claims Examiner 2</fullName>
            </value>
            <value>
                <fullName>Group Disability Sr Claims Examiner</fullName>
            </value>
            <value>
                <fullName>Group Disability Claims Team Lead</fullName>
            </value>
            <value>
                <fullName>Group Disability Claims Supervisor</fullName>
            </value>
            <value>
                <fullName>Group Disability Claims Manager</fullName>
            </value>
            <value>
                <fullName>Group Disability Claims TDI Examiner Trainee</fullName>
            </value>
            <value>
                <fullName>Group Disability Claims TDI Examiner 1</fullName>
            </value>
            <value>
                <fullName>Group Disability Claims TDI Examiner 2</fullName>
            </value>
            <value>
                <fullName>Group Disability Claims TDI Examiner 3</fullName>
            </value>
            <value>
                <fullName>Claims Director</fullName>
            </value>
            <value>
                <fullName>Claims Sr Director</fullName>
            </value>
            <value>
                <fullName>VP Claims</fullName>
            </value>
            <value>
                <fullName>Claims Trainee</fullName>
            </value>
            <value>
                <fullName>Claims Auditor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>