unpackaged/main/default/objects/User/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Indicates which blue partners a user works with. 
1. Allows users to update the Blue Rep field on master group
2. Allows users to create Prospect accounts (along with object CRUD)</description>
    <inlineHelpText>Indicates which blue partners a user works with. 
1. Allows users to update the Blue Rep field on master group
2. Allows users to create Prospect accounts (along with object CRUD)</inlineHelpText>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
            <value>
                <fullName>RG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>