unpackaged/main/default/objects/User/fields/RFP_Analyst__c.field-meta.xml
<CustomField>
    <fullName>RFP_Analyst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFP Analyst</label>
    <type>Checkbox</type>
</CustomField>