unpackaged/main/default/objects/User/fields/Send_Email_Alert_on_Case_Assign__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Alert_on_Case_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Alert on Case Assign</label>
    <type>Checkbox</type>
</CustomField>