unpackaged/main/default/objects/User/fields/SupplementalClaimsLOARole__c.field-meta.xml
<CustomField>
    <fullName>SupplementalClaimsLOARole__c</fullName>
    <label>Supplemental Claims LOA Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplemental Claims Examiner 1</fullName>
            </value>
            <value>
                <fullName>Supplemental Claims Examiner 2</fullName>
            </value>
            <value>
                <fullName>Supplemental Claims Examiner 3</fullName>
            </value>
            <value>
                <fullName>Supplemental Claims Examiner 4</fullName>
            </value>
            <value>
                <fullName>Supplemental Claims Team Lead</fullName>
            </value>
            <value>
                <fullName>Supplemental Claims Supervisor</fullName>
            </value>
            <value>
                <fullName>Supplemental Claims Manager</fullName>
            </value>
            <value>
                <fullName>Claims Director</fullName>
            </value>
            <value>
                <fullName>Claims Sr Director</fullName>
            </value>
            <value>
                <fullName>VP Claims</fullName>
            </value>
            <value>
                <fullName>Claims Trainee</fullName>
            </value>
            <value>
                <fullName>Claims Auditor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>