unpackaged/main/default/objects/User/listViews/All_Group_Underwriting.listView-meta.xml
<ListView>
    <fullName>All_Group_Underwriting</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Group Underwriting</value>
    </filters>
    <label>All Group Underwriting</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>